@@ -7,7 +7,6 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Scanner;
 import java.util.Set;
 
 /**
@@ -121,7 +120,7 @@ final public class Perplexity {
         for (int i = 0; i < k; i++) {
             convertedT[i] = Integer.parseInt(parsedT[i]);
         }
-        return (float) ((float) -(1 / k) * logP(convertedT));
+        return ((float) -(1 / k) * logP(convertedT));
     }
 
     /*
@@ -157,15 +156,17 @@ final public class Perplexity {
     /*
     * Calcul de la meilleur phrase
     */
-    public float bestSentence(String sentence){
+    public String bestSentence(String sentence){
         sentencePermutation(" ",sentence);
-        List<Float> perplexities = new ArrayList<>();
+        List<Pair<String,Float>> perplexities = new ArrayList<>();
         for(List<String> sentencePermute : sentencePermutations){
-            String line = sentencePermute.toString();
-            perplexities.add(PP(line));
+            String line = String.join(" ",sentencePermute);
+            float perplexity = PP(line);
+            Pair<String,Float> pair = new Pair<>(line,perplexity);
+            perplexities.add(pair);
         }
-        Collections.sort(perplexities, Comparator.comparing((Float p) -> +p));
-        return perplexities.get(0);
+        Collections.sort(perplexities, Comparator.comparing(p -> +p.getSecond()));
+        return perplexities.get(0).getFirst();
     }
 
     public static void main(String[] args) {
@@ -175,8 +176,9 @@ final public class Perplexity {
         perplexity.getOneGram().printMap();
         perplexity.getBiGramList().printBiGram();
         
-        perplexity.sentencePermutation(" ", " Je vol un avion");
+        perplexity.sentencePermutation(" ", "Je vol un avion");
         perplexity.showSentencePermutations();
-        
+        String sentence = perplexity.bestSentence("Je vol un avion");
+        System.out.println(sentence);
     }
 }
